--- a/week 2/python,numpy,and vectorization.ipynb
+++ b/week 2/python,numpy,and vectorization.ipynb
@@ -548,6 +548,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = \n",
+      "[[ 0  1  2  3  4  5  6  7  8  9]\n",
+      " [10 11 12 13 14 15 16 17 18 19]]\n",
+      "a[0, 2:7:1] =  [2 3 4 5 6] ,  a[0, 2:7:1].shape = (5,) a 1-D array\n",
+      "a[:, 2:7:1] = \n",
+      " [[ 2  3  4  5  6]\n",
+      " [12 13 14 15 16]] ,  a[:, 2:7:1].shape = (2, 5) a 2-D array\n",
+      "a[:,:] = \n",
+      " [[ 0  1  2  3  4  5  6  7  8  9]\n",
+      " [10 11 12 13 14 15 16 17 18 19]] ,  a[:,:].shape = (2, 10)\n",
+      "a[1,:] =  [10 11 12 13 14 15 16 17 18 19] ,  a[1,:].shape = (10,) a 1-D array\n",
+      "a[1]   =  [10 11 12 13 14 15 16 17 18 19] ,  a[1].shape   = (10,) a 1-D array\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vector 2-D slicing operations\n",
+    "a=np.arange(20).reshape(-1,10)\n",
+    "print(f\"a = \\n{a}\")\n",
+    "\n",
+    "#access 5 consecutive elements (start:stop:step)\n",
+    "print(\"a[0, 2:7:1] = \", a[0, 2:7:1], \",  a[0, 2:7:1].shape =\", a[0, 2:7:1].shape, \"a 1-D array\") #a[row, start:stop:step]\n",
+    "\n",
+    "#access 5 consecutive elements (start:stop:step) in two rows\n",
+    "print(\"a[:, 2:7:1] = \\n\", a[:, 2:7:1], \",  a[:, 2:7:1].shape =\", a[:, 2:7:1].shape, \"a 2-D array\")\n",
+    "\n",
+    "# access all elements\n",
+    "print(\"a[:,:] = \\n\", a[:,:], \",  a[:,:].shape =\", a[:,:].shape)\n",
+    "\n",
+    "# access all elements in one row (very common usage)\n",
+    "print(\"a[1,:] = \", a[1,:], \",  a[1,:].shape =\", a[1,:].shape, \"a 1-D array\")\n",
+    "# same as\n",
+    "print(\"a[1]   = \", a[1],   \",  a[1].shape   =\", a[1].shape, \"a 1-D array\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
